@@ -43,6 +43,7 @@ Changes in version 3.0.6 (2011-07-29)
 * fixed JPA 2.0 timeout hints to correctly specify milliseconds
 * updated Quartz package to support Quartz 1.8 as well (note: not supporting Quartz 2.0 yet)
 * fixed @Rule execution order in SpringJUnit4ClassRunner to match standard JUnit 4 behavior
+* Explicit status code in RedirectView respected in HTTP 1.0 compatibility mode
 
 
 Changes in version 3.0.5 (2010-10-20)
